# E_Lexcion

./: CMakeLists.txt  Control.c  Data.c  Databass.c  E_Lexicon.h  E_Lexicon.sln  E_Lexicon.vcxproj  Main.c  Menu.c  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  codeql.yml  msbuild.yml
